<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySecondLVAndroidApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="add_category_btn">add</string>
	<string name="edit_category">category</string>
	<string name="edit_product">product</string>
	<string name="add_product_btn">add</string>
	<string name="update_product_btn">update</string>
	<string name="delete_product_btn">delete</string>
</resources>
